javascript for adding userr comments in the chat

--- a/index.html
+++ b/index.html
@@ -19,18 +19,16 @@
                     <input class="mb-3" type="text" name="" id="link-input">
                     <label class="pb-2" for="comment-input">Оставьте комментарий:</label>
                     <textarea name="" id="comment-input" cols="50" rows="10"></textarea>
-                    <input class="btn btn-success mt-4 w-50" type="submit" value="Отправить">
+                    <!-- <input class="btn btn-success mt-4 w-50" type="submit" value="Отправить"> -->
+                    <button class="btn btn-success mt-4 w-50" type="button">Отправить</button>
                 </form>
             </div>
-            <div class="col-md-8">
+            <div class="chat col-md-8">
                 <h2 class="py-4 fs-3">Чат</h2>
-                <div class="d-flex align-items-center">
-                    <img class="avatar-img" src="https://i.etsystatic.com/18604024/r/il/6e6c3a/4649273370/il_1588xN.4649273370_1yi4.jpg" width="120px" alt="Ваш аватар">
-                    <p class="px-4 fw-bold">Имя</p>
-                </div>
-                <p class="py-4">Комментарий</p>
             </div>
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
