added a version with the submit event instead of click

--- a/submit-button/index.html
+++ b/submit-button/index.html
@@ -19,7 +19,7 @@
                     <input class="mb-3" type="text" name="" id="link-input">
                     <label class="pb-2" for="comment-input">Оставьте комментарий:</label>
                     <textarea name="" id="comment-input" cols="50" rows="10"></textarea>
-                    <button class="btn btn-success mt-4 w-50" type="button">Отправить</button>
+                    <input class="btn btn-success mt-4 w-50" type="submit" value="Отправить">
                 </form>
             </div>
             <div class="chat col-md-8">
@@ -28,6 +28,6 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="otherSolution.js"></script>
 </body>
 </html>
