added random avatars

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <input class="form-check-input" type="checkbox" role="switch" id="show-name" checked>
                         <label class="form-check-label" for="show-name">Показывать ваше имя?</label>
                     </div>
-                    <label class="form-label" for="name-input">Введите ваше имя:</label>
+                    <label class="name-label form-label" for="name-input">Введите ваше имя:</label>
                     <input class="form-control mb-3" type="text" name="" id="name-input">
                     <label class="form-label" for="link-input">Введите ссылку вашего аватара:</label>
                     <input class="form-control mb-3" type="text" name="" id="link-input">
@@ -26,8 +26,9 @@
                     <button class="btn btn-primary mt-4 w-50" type="button">Отправить</button>
                 </form>
             </div>
-            <div class="chat col-md-8">
+            <div class="col-md-8">
                 <h2 class="py-4 fs-3">Чат</h2>
+                <div class="chat"></div>
             </div>
         </div>
     </div>
